# sm-ntfs-tool

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  Makefile  README.md
bridge/: SMNTFSBridge.h
macos-app/: Package.swift
macos-app/Sources/App/: SMDiskManagerApp.swift
macos-app/Sources/Models/: Disk.swift
macos-app/Sources/Services/: DiskManager.swift
macos-app/Sources/ViewModels/: DiskViewModel.swift
macos-app/Sources/Views/: DiskDetailView.swift  DiskListView.swift  DiskRowView.swift  MainWindow.swift  SettingsView.swift
rust-driver/: Cargo.toml
rust-driver/sm-ntfs-cli/: Cargo.toml
rust-driver/sm-ntfs-cli/src/: main.rs
rust-driver/sm-ntfs-core/: Cargo.toml
rust-driver/sm-ntfs-core/src/: lib.rs
rust-driver/sm-ntfs-core/src/cache/: mod.rs
rust-driver/sm-ntfs-core/src/ffi/: mod.rs
rust-driver/sm-ntfs-core/src/io/: buffer.rs  device.rs  mod.rs  sync.rs
rust-driver/sm-ntfs-core/src/ntfs/: mod.rs
rust-driver/sm-ntfs-core/src/parser/: mft.rs  mod.rs  streams.rs  volume.rs
rust-driver/sm-ntfs-core/src/utils/: config.rs  error.rs  logging.rs  mod.rs
rust-driver/sm-ntfs-fuse/: Cargo.toml
rust-driver/sm-ntfs-fuse/src/: lib.rs
rust-driver/sm-ntfs-fuse/src/fuse/: mod.rs
