[package]
name = "sm-ntfs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
ntfs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lru = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.13"

# TODO: Add benchmarks later
# [[bench]]
# name = "cache_benchmark"
# harness = false
